# rmf_traffic

./: README.md  codecov.yml
rmf_traffic/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  colcon.pkg  package.xml
rmf_traffic/cmake/: rmf_traffic-config.cmake.in
rmf_traffic/include/rmf_traffic/: DetectConflict.hpp  Parking.hpp  Profile.hpp  Region.hpp  Route.hpp  Trajectory.hpp
rmf_traffic/include/rmf_traffic/agv/: CentralizedNegotiation.hpp  Graph.hpp  Interpolate.hpp  LaneClosure.hpp  Planner.hpp  Rollout.hpp  RouteValidator.hpp  SimpleNegotiator.hpp  VehicleTraits.hpp
rmf_traffic/include/rmf_traffic/agv/debug/: debug_Planner.hpp
rmf_traffic/include/rmf_traffic/blockade/: Moderator.hpp  Participant.hpp  Rectifier.hpp  Status.hpp  Writer.hpp
rmf_traffic/include/rmf_traffic/debug/: Plumber.hpp
rmf_traffic/include/rmf_traffic/geometry/: Circle.hpp  ConvexShape.hpp  Shape.hpp  Space.hpp
rmf_traffic/include/rmf_traffic/reservation/: Adjustment.hpp  Alternative.hpp  Contention.hpp  Description.hpp  Negotiator.hpp  Offer.hpp  Participant.hpp  Request.hpp  Resource.hpp  Voucher.hpp
rmf_traffic/include/rmf_traffic/reservation/detail/: impl_Negotiator.hpp
rmf_traffic/include/rmf_traffic/reservations/: Database.hpp  Negotiator.hpp  Participant.hpp  Query.hpp  Reservation.hpp  ReservationManager.hpp  ReservationRequest.hpp  Singlish.hpp  Viewer.hpp  Writer.hpp
rmf_traffic/include/rmf_traffic/reservations/planner/: GenericPlanGenerator.hpp  PlanView.hpp
rmf_traffic/include/rmf_traffic/schedule/: Change.hpp  Database.hpp  Itinerary.hpp  Mirror.hpp  Negotiation.hpp  Negotiator.hpp  Participant.hpp  ParticipantDescription.hpp  Patch.hpp  Query.hpp  Rectifier.hpp  StubbornNegotiator.hpp  Viewer.hpp  Writer.hpp
rmf_traffic/src/rmf_traffic/: CCD.cpp  CCD.hpp  CCDSubroutines.cpp  DetectConflict.cpp  DetectConflictInternal.hpp  Profile.cpp  ProfileInternal.hpp  README_OffsetCCD.md  Region.cpp  Route.cpp  Spline.cpp  Spline.hpp  StaticMotion.cpp  StaticMotion.hpp  Trajectory.cpp  TrajectoryInternal.hpp  internal_Route.hpp
rmf_traffic/src/rmf_traffic/agv/: CentralizedNegotiation.cpp  Graph.cpp  Interpolate.cpp  LaneClosure.cpp  Planner.cpp  Rollout.cpp  RouteValidator.cpp  SimpleNegotiator.cpp  VehicleTraits.cpp  internal_Graph.hpp  internal_Interpolate.hpp  internal_Planner.hpp  internal_VehicleTraits.hpp  internal_planning.cpp  internal_planning.hpp
rmf_traffic/src/rmf_traffic/agv/planning/: CacheManager.hpp  DifferentialDriveHeuristic.cpp  DifferentialDriveHeuristic.hpp  DifferentialDriveMap.cpp  DifferentialDriveMap.hpp  DifferentialDrivePlanner.cpp  DifferentialDrivePlanner.hpp  EuclideanHeuristic.cpp  EuclideanHeuristic.hpp  MinimalTravelHeuristic.cpp  MinimalTravelHeuristic.hpp  ShortestPathHeuristic.cpp  ShortestPathHeuristic.hpp  Supergraph.cpp  Supergraph.hpp  TranslationHeuristic.cpp  TranslationHeuristic.hpp  Tree.hpp  a_star.hpp  impl_MinimalTravelHeuristic.hpp  impl_Tree.hpp
rmf_traffic/src/rmf_traffic/blockade/: Constraint.cpp  Constraint.hpp  Moderator.cpp  Participant.cpp  Rectifier.cpp  conflicts.cpp  conflicts.hpp  geometry.cpp  geometry.hpp  internal_Participant.hpp  internal_Rectifier.hpp
rmf_traffic/src/rmf_traffic/debug/: Plumber.cpp
rmf_traffic/src/rmf_traffic/geometry/: Box.cpp  Box.hpp  Circle.cpp  Shape.cpp  ShapeInternal.hpp  SimplePolygon.cpp  SimplePolygon.hpp  Space.cpp
rmf_traffic/src/rmf_traffic/reservations/: Database.cpp  Query.cpp  Reservation.cpp  ReservationRequest.cpp  View.cpp  internal_ConstraintTracker.hpp  internal_DatabasImpl.hpp  internal_SchedulePlanner.hpp  internal_State.hpp  internal_ViewImpl.hpp
rmf_traffic/src/rmf_traffic/reservations/internal/: ExecutionEngine.hpp  Heuristic.hpp  Optimizer.hpp  ParticipantStore.hpp  Protocol.hpp  RequestQueue.hpp  RequestStore.hpp  State.hpp  StateDiff.hpp
rmf_traffic/src/rmf_traffic/reservations/planner/: internal_Gap.hpp  internal_planner.hpp
rmf_traffic/src/rmf_traffic/schedule/: Change.cpp  ChangeInternal.hpp  Database.cpp  DependencyTracker.cpp  DependencyTracker.hpp  Inconsistencies.cpp  InconsistenciesInternal.hpp  InconsistencyTracker.cpp  InconsistencyTracker.hpp  Mirror.cpp  Negotiation.cpp  Negotiator.cpp  Participant.cpp  ParticipantDescription.cpp  Patch.cpp  Progress.cpp  Query.cpp  Rectifier.cpp  RectifierInternal.hpp  StubbornNegotiator.cpp  Timeline.hpp  Viewer.cpp  ViewerInternal.hpp  Writer.cpp  debug_Database.hpp  internal_Database.hpp  internal_Participant.hpp  internal_Progress.hpp  internal_Rectifier.hpp  internal_Snapshot.hpp  internal_Viewer.hpp
rmf_traffic/test/regression/: regress_DetectConflict_fail.cpp  regress_Negotiation_segfault.cpp
rmf_traffic/test/resources/regress_DetectConflict_fail/: Waypoint1.txt  Waypoint2.txt  Waypoint3.txt  Waypoint4.txt  Waypoint5.txt  Waypoint6.txt  Waypoint7.txt  Waypoint8.txt
rmf_traffic/test/unit/: fcl_test.cpp  test_Conflict.cpp  test_Profile.cpp  test_Shape.cpp  test_Space.cpp  test_Trajectory.cpp  utils_Conflict.hpp  utils_Trajectory.hpp
rmf_traffic/test/unit/agv/: test_Graph.cpp  test_LaneClosure.cpp  test_Negotiation_edgecases.cpp  test_Negotiator.cpp  test_Planner.cpp  test_Rollout.cpp  test_compute_plan_starts.cpp  utils_NegotiationRoom.hpp
rmf_traffic/test/unit/agv/planning/: test_DifferentialDriveHeuristic.cpp  test_EuclideanHeuristic.cpp  test_ShortestPathHeuristic.cpp  (+2 more)
rmf_traffic/test/unit/blockade/: test_blockade_Constraint.cpp  test_blockade_Moderator.cpp  test_blockade_conflicts.cpp  test_blockade_geometry.cpp  utils_blockade_scenarios.cpp  utils_blockade_scenarios.hpp  utils_blockade_simulation.hpp
rmf_traffic/test/unit/reservations/: test_DatabasImpl.cpp  test_Database.cpp  test_Gap.cpp  test_Reservation.cpp  test_state.cpp
rmf_traffic/test/unit/schedule/: test_Database.cpp  test_Mirror.cpp  test_Negotiation.cpp  test_Participant.cpp  test_Query.cpp  test_Region.cpp  test_Spacetime.cpp  utils_Database.hpp
rmf_traffic_examples/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
rmf_traffic_examples/src/: three_robots.cpp
(+12 files in other folders)
