<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_traffic</name>
  <version>1.3.0</version>
  <description>Package for managing traffic in the Robotics Middleware Framework</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <build_depend>rmf_utils</build_depend>
  <build_export_depend>rmf_utils</build_export_depend>

  <depend>libccd-dev</depend>
  <!-- Note: We require fcl-0.6 or greater. A copy of fcl-0.6 is provided
       in-source in case the user is missing it. -->
  <depend>fcl</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>rmf_cmake_uncrustify</test_depend>

  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
