<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_traffic_examples</name>
  <version>2.0.0</version>
  <description>Examples of how to use the rmf_traffic library</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <depend>rmf_traffic</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
